[tool.poetry]
name = "qm9-gen"
version = "0.1.0"
description = ""
authors = ["Max Hoffman <max@dolthub.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
joblib = "^1.0.1"
networkx = "^2.5.1"
astunparse = "^1.6.3"
numpy = "^1.20.3"
pandas = "^1.2.4"


[tool.poetry.dev-dependencies]
tensorflow = {extras = ["keras"], version = "^2.5.0"}
megnet = "^1.2.8"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
